--- a/build.gradle
+++ b/build.gradle
@@ -13,6 +13,8 @@ repositories {
 
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib"
+    implementation 'org.slf4j:slf4j-simple:1.6.1'
+    implementation 'io.github.microutils:kotlin-logging:1.6.22'
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.0'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.0'
 }
